3 Ano/2 Semestre/LFA/Pratico/guiao-p-exemplos/guiao-p/ex2/FracLang.g4
grammar FracLang;

prog: stat* EOF;

stat
    : 'display' expr ';'      #StatDisplay
    | var=ID '<=' expr ';'    #StatAssign
    ;

expr
    : INT '/' INT             #ExprFrac
    | INT                     #ExprInt
    | ID                      #ExprID
    ;

INT: [0-9]+;
ID: [a-z]+;
WS: [ \r\n\t]+ -> skip;
COMMENT: '--' ~[\n\r]* -> skip;
